fix mobile view layout issues

--- a/client/src/components/Hero/Hero.css
+++ b/client/src/components/Hero/Hero.css
@@ -29,3 +29,9 @@
 .card-text {
 	font-size: 13pt;
 }
+
+@media only screen and (max-width: 450px) {
+	.cta {
+		font-size: 32pt;
+	}
+}
